--- a/index.html
+++ b/index.html
@@ -1,84 +1,264 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
-        <title>Scrolling Nav - Start Bootstrap </title>
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-        <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles.css" rel="stylesheet" />
-    </head>
-    <body id="page-top">
-        <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
-            <div class="container px-4">
-                <a class="navbar-brand" href="#page-top">Start Bootstrap</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-                <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-        <!-- Header-->
-        <header class="bg-primary bg-gradient text-white">
-            <div class="container px-4 text-center">
-                <h1 class="fw-bolder">Welcome to Scrolling Nav</h1>
-                <p class="lead">A functional Bootstrap 5 boilerplate for one page scrolling websites</p>
-                <a class="btn btn-lg btn-light" href="#about">Start scrolling!</a>
-            </div>
-        </header>
-        <!-- About section-->
-        <section id="about">
-            <div class="container px-4">
-                <div class="row gx-4 justify-content-center">
-                    <div class="col-lg-8">
-                        <h2>About this page</h2>
-                        <p class="lead">This is a great place to talk about your webpage. This template is purposefully unstyled so you can use it as a boilerplate or starting point for you own landing page designs! This template features:</p>
-                        <ul>
-                            <li>Clickable nav links that smooth scroll to page sections</li>
-                            <li>Responsive behavior when clicking nav links perfect for a one page website</li>
-                            <li>Bootstrap's scrollspy feature which highlights which section of the page you're on in the navbar</li>
-                            <li>Minimal custom CSS so you are free to explore your own unique design options</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- Services section-->
-        <section class="bg-light" id="services">
-            <div class="container px-4">
-                <div class="row gx-4 justify-content-center">
-                    <div class="col-lg-8">
-                        <h2>Services we offer</h2>
-                        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut optio velit inventore, expedita quo laboriosam possimus ea consequatur vitae, doloribus consequuntur ex. Nemo assumenda laborum vel, labore ut velit dignissimos.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- Contact section-->
-        <section id="contact">
-            <div class="container px-4">
-                <div class="row gx-4 justify-content-center">
-                    <div class="col-lg-8">
-                        <h2>Contact us</h2>
-                        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero odio fugiat voluptatem dolor, provident officiis, id iusto! Obcaecati incidunt, qui nihil beatae magnam et repudiandae ipsa exercitationem, in, quo totam.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- Footer-->
-        <footer class="py-5 bg-dark">
-            <div class="container px-4"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2023</p></div>
-        </footer>
-        <!-- Bootstrap core JS-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
-    </body>
-</html>
+/* --------------------
+     GLOBAL
+-------------------- */
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+html {
+    scroll-behavior: smooth;
+}
+
+body {
+    font-family: 'Fredoka', sans-serif;
+    background: #0f2a2e;
+    color: #fff;
+}
+
+/* Headings */
+h1, h2, h3 {
+    font-family: 'Patrick Hand', cursive;
+}
+
+/* --------------------
+     HERO
+-------------------- */
+
+#hero {
+    height: 100vh;
+    padding: 60px 20px;
+    background: #0f2b2e;
+    text-align: center;
+    position: relative;
+}
+
+.sun {
+    width: 300px;
+    height: 300px;
+    background: radial-gradient(circle, #ffdd5c, #ff9f29);
+    border-radius: 50%;
+    margin: 0 auto;
+}
+
+.hero-title {
+    font-size: 4rem;
+    margin-top: 20px;
+}
+
+.hero-title span {
+    color: #2cc4c4;
+    font-family: 'Permanent Marker', cursive;
+}
+
+.hero-sub {
+    margin-top: 10px;
+    font-size: 1.6rem;
+}
+
+.signature {
+    color: #d93333;
+    font-family: 'Permanent Marker', cursive;
+}
+
+.laptop {
+    width: 200px;
+    margin-top: 30px;
+}
+
+/* Decorative placeholders */
+.hero-decor {
+    position: absolute;
+    width: 80px;
+    height: 80px;
+}
+
+/* --------------------
+    STICKY NAV
+-------------------- */
+
+#sticky-nav {
+    position: sticky;
+    top: 0;
+    background: url('images/cork-texture.jpg');
+    padding: 15px;
+    z-index: 2000;
+    box-shadow: 0 4px 4px rgba(0,0,0,0.4);
+}
+
+#sticky-nav ul {
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+    list-style: none;
+}
+
+.nav-button {
+    padding: 12px 25px;
+    border-radius: 50%;
+    color: #000;
+    text-decoration: none;
+    font-family: 'Patrick Hand';
+    font-size: 1.3rem;
+    background: #ccc;
+    border: 3px solid #000;
+}
+
+/* Button colors = sewing buttons */
+.green-btn { background: #a8d672; }
+.pink-btn { background: #ff99b9; }
+.tan-btn { background: #d4b18a; }
+
+/* --------------------
+    MY WORK – CORK BOARD
+-------------------- */
+
+#work {
+    padding: 80px 20px;
+    background: url('images/cork-board.jpg');
+    background-size: cover;
+    color: #000;
+}
+
+.cork-title {
+    text-align: center;
+    color: #000;
+    font-size: 3rem;
+}
+
+.cork-board {
+    margin-top: 40px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+    gap: 40px;
+}
+
+.work-item {
+    position: relative;
+    background: #fff;
+    padding: 15px;
+    border-radius: 8px;
+    box-shadow: 0 10px 6px rgba(0,0,0,0.3);
+}
+
+.pushpin {
+    width: 25px;
+    height: 25px;
+    background: red;
+    border-radius: 50%;
+    position: absolute;
+    top: -10px;
+    left: calc(50% - 12px);
+}
+
+/* Frames */
+.polaroid {
+    border: 10px solid white;
+    box-shadow: 0 8px 15px rgba(0,0,0,0.5);
+}
+
+.filmstrip {
+    border: 8px dashed black;
+}
+
+.deviceframe {
+    border: 8px solid #333;
+    border-radius: 20px;
+}
+
+/* Sticky note */
+.sticky-note {
+    background: #fff799;
+    padding: 20px;
+    font-family: 'Patrick Hand';
+    font-size: 1.4rem;
+    transform: rotate(-3deg);
+    box-shadow: 0 10px 6px rgba(0,0,0,0.3);
+}
+
+/* --------------------
+    ABOUT ME – NOTEBOOK
+-------------------- */
+
+#about {
+    padding: 80px 20px;
+    color: #000;
+    background: #faf5e6;
+}
+
+.notebook-paper {
+    background: url('images/notebook-paper.jpg');
+    background-size: cover;
+    padding: 60px;
+    position: relative;
+    max-width: 900px;
+    margin: auto;
+}
+
+.spiral {
+    position: absolute;
+    left: -30px;
+    top: 0;
+    width: 30px;
+    height: 100%;
+    background: url('images/spiral-holes.png') repeat-y;
+}
+
+.name-background {
+    font-size: 6rem;
+    opacity: 0.2;
+    font-family: 'Permanent Marker';
+    text-align: center;
+}
+
+.bio-text {
+    font-size: 1.3rem;
+    margin-top: 20px;
+}
+
+.flag {
+    width: 120px;
+    margin-top: 20px;
+}
+
+/* --------------------
+    EDUCATION
+-------------------- */
+
+#education {
+    background: #3b2e1f;
+    padding: 100px 20px;
+    color: #fffbe0;
+    position: relative;
+}
+
+.torn-paper-top {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 40px;
+    background: url('images/torn-paper.png') repeat-x;
+}
+
+.certificate-box {
+    border: 4px solid #fff;
+    padding: 40px;
+    max-width: 600px;
+    margin: auto;
+    background: rgba(255,255,255,0.1);
+}
+
+/* --------------------
+    SKILLS
+-------------------- */
+
+#skills {
+    padding: 80px;
+    background: #2b2b2b;
+}
+
+.skill {
+    margin: 20px auto;
+    max-w
