--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </h1>
 
             <div class="hero-collage">
-                <img src="assets/laptop.png" alt="" class="collage-item">
+                <img src="assets/computer-element.png" alt="" class="collage-item">
                 <img src="assets/hand.png" alt="" class="collage-item">
                 <img src="assets/tape.png" alt="" class="collage-item">
             </div>
