--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Artfolio – Isa Dagostino</title>
 
+    <!-- CSS -->
     <link rel="stylesheet" href="style.css">
+
+    <!-- Optional JS -->
+    <script defer src="script.js"></script>
 </head>
 
 <body>
@@ -21,9 +25,9 @@
             </h1>
 
             <div class="hero-collage">
-                <img src="assets/computer-element.png" alt="" class="collage-item">
-                <img src="assets/hand.png" alt="" class="collage-item">
-                <img src="assets/tape.png" alt="" class="collage-item">
+                <img src="assets/computer-element.png" alt="Computer element" class="collage-item">
+                <img src="assets/hand.png" alt="Hand element" class="collage-item">
+                <img src="assets/tape.png" alt="Tape element" class="collage-item">
             </div>
         </div>
 
@@ -46,22 +50,22 @@
         <div class="work-grid">
             <div class="work-card">
                 <h3>Artwork</h3>
-                <img src="assets/placeholder.png" alt="">
+                <img src="assets/placeholder.png" alt="Artwork placeholder">
             </div>
 
             <div class="work-card">
                 <h3>Digital Video</h3>
-                <img src="assets/placeholder.png" alt="">
+                <img src="assets/placeholder.png" alt="Digital Video placeholder">
             </div>
 
             <div class="work-card">
                 <h3>Apps & Sites</h3>
-                <img src="assets/placeholder.png" alt="">
+                <img src="assets/placeholder.png" alt="Apps & Sites placeholder">
             </div>
 
             <div class="work-card">
                 <h3>Photography</h3>
-                <img src="assets/placeholder.png" alt="">
+                <img src="assets/placeholder.png" alt="Photography placeholder">
             </div>
         </div>
     </section>
@@ -90,7 +94,7 @@
         </p>
 
         <div class="edu-graphic">
-            <img src="assets/school.png" alt="">
+            <img src="assets/school.png" alt="School graphic">
         </div>
     </section>
 
